PL/Compilador/parser.output
Estado 92 conflictos: 2 desplazamiento/reducción
Estado 129 conflictos: 2 desplazamiento/reducción, 1 reducción/reducción
Estado 181 conflictos: 1 reducción/reducción
Estado 182 conflictos: 1 reducción/reducción
Estado 190 conflictos: 2 reducción/reducción


Gramática

    0 $accept: algoritmo $end

    1 algoritmo: T_DECL_ALGORITMO T_ID T_COMPOSICION_SECUENCIAL V_cabecera V_bloque_alg T_TERM_ALGORITMO T_PUNTO

    2 V_cabecera: V_decl_globales V_decl_a_f V_decl_ent_sal T_PREC

    3 V_bloque_alg: V_bloque T_POST

    4 V_decl_globales: V_declaracion_tipo V_decl_globales
    5                | V_declaracion_const V_decl_globales
    6                | ε

    7 V_decl_a_f: V_accion_d V_decl_a_f
    8           | V_funcion_d V_decl_a_f
    9           | ε

   10 V_bloque: V_declaraciones V_instrucciones

   11 V_declaraciones: V_declaracion_tipo V_declaraciones
   12                | V_declaracion_const V_declaraciones
   13                | V_declaracion_var V_declaraciones
   14                | ε

   15 V_declaracion_tipo: T_DEF_TIPO V_lista_d_tipo T_TERM_TIPO T_COMPOSICION_SECUENCIAL

   16 V_declaracion_const: T_DECL_CONST V_lista_d_const T_TERM_CONST T_COMPOSICION_SECUENCIAL

   17 V_declaracion_var: T_DECL_VAR V_lista_d_var T_TERM_VAR T_COMPOSICION_SECUENCIAL

   18 V_lista_d_tipo: T_ID T_IGUAL V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_d_tipo
   19               | ε

   20 V_d_tipo: T_DECL_TUPLA V_lista_campos T_TERM_TUPLA
   21         | T_DECL_TABLA T_CORCHETE_APERTURA V_expresion_t T_SUBRANGO_TABLA V_expresion_t T_CORCHETE_CIERRE T_DE V_d_tipo
   22         | T_ID
   23         | V_expresion_t T_SUBRANGO_TABLA V_expresion_t
   24         | T_REF V_d_tipo
   25         | T_NOMBRE_TIPO

   26 V_expresion_t: V_expresion
   27              | T_LITERAL_CARACTER

   28 V_lista_campos: T_ID T_OPERADOR_DEF_TIPO V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_campos
   29               | ε

   30 V_lista_d_const: T_ID T_IGUAL T_LITERAL_NUMERICO T_COMPOSICION_SECUENCIAL V_lista_d_const
   31                | T_ID T_IGUAL T_LITERAL_CARACTER T_COMPOSICION_SECUENCIAL V_lista_d_const
   32                | T_ID_BOOLEANO T_IGUAL T_LITERAL_BOOLEANO T_COMPOSICION_SECUENCIAL V_lista_d_const
   33                | T_ID T_IGUAL T_LITERAL_CADENA T_COMPOSICION_SECUENCIAL V_lista_d_const
   34                | ε

   35 V_lista_d_var: V_lista_id T_OPERADOR_DEF_TIPO V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_d_var
   36              | ε

   37 V_lista_id: T_ID T_SEPARADOR V_lista_id
   38           | T_ID

   39 V_decl_ent_sal: V_decl_ent
   40               | V_decl_ent V_decl_sal
   41               | V_decl_sal

   42 V_decl_ent: T_ENTRADA V_lista_d_var

   43 V_decl_sal: T_SALIDA V_lista_d_var

   44 V_expresion: V_exp_a
   45            | V_exp_b
   46            | V_funcion_ll

   47 V_exp_a: V_exp_a T_OPERADOR_PRIO_TRES V_exp_a
   48        | V_exp_a T_OPERADOR_PRIO_DOS V_exp_a
   49        | T_PARENTESIS_APERTURA V_exp_a T_PARENTESIS_CIERRE
   50        | V_operando
   51        | T_LITERAL_NUMERICO
   52        | T_OPERADOR_PRIO_TRES V_exp_a

   53 V_exp_b: V_exp_b T_OPERADOR_Y V_exp_b
   54        | V_exp_b T_OPERADOR_O V_exp_b
   55        | T_OPERADOR_NO V_exp_b
   56        | V_operando_booleano
   57        | T_LITERAL_BOOLEANO
   58        | V_expresion T_OPERADOR_RELACIONAL V_expresion
   59        | T_PARENTESIS_APERTURA V_exp_b T_PARENTESIS_CIERRE

   60 V_operando: V_cadena_operandos

   61 V_cadena_operandos: V_operando_no_booleano V_continuacion_cadena

   62 V_continuacion_cadena: T_PUNTO V_operando_no_booleano V_continuacion_cadena
   63                      | T_PUNTO V_operando_booleano
   64                      | ε

   65 V_operando_no_booleano: T_ID
   66                       | V_operando T_CORCHETE_APERTURA V_expresion T_CORCHETE_CIERRE
   67                       | V_operando T_REF

   68 V_operando_booleano: T_ID_BOOLEANO

   69 V_instrucciones: V_instruccion T_COMPOSICION_SECUENCIAL V_instrucciones
   70                | V_instruccion

   71 V_instruccion: T_CONTINUAR
   72              | V_asignacion
   73              | V_alternativa
   74              | V_iiteracion
   75              | V_accion_ll

   76 V_asignacion: V_operando T_ASIGNACION V_expresion

   77 V_alternativa: T_DECL_CONDICIONAL_SI V_expresion T_ENTONCES V_instrucciones V_lista_opciones T_TERM_CONDICIONAL_SI

   78 V_lista_opciones: T_DECL_CONDICIONAL_SINO V_expresion T_ENTONCES V_instrucciones V_lista_opciones
   79                 | ε

   80 V_iiteracion: V_it_cota_fija
   81             | V_it_cota_exp

   82 V_it_cota_exp: T_DECL_B_MIENTRAS V_expresion T_HACER V_instrucciones T_TERM_B_MIENTRAS

   83 V_it_cota_fija: T_DECL_B_PARA T_ID T_ASIGNACION V_expresion T_HASTA V_expresion T_HACER V_instrucciones T_TERM_B_PARA

   84 V_accion_d: T_DECL_ACC V_a_cabecera V_bloque T_TERM_ACC

   85 V_funcion_d: T_DECL_FUNC V_f_cabecera V_bloque T_DEV V_expresion T_TERM_FUNC

   86 V_a_cabecera: T_ID T_PARENTESIS_APERTURA V_d_par_form T_PARENTESIS_CIERRE T_COMPOSICION_SECUENCIAL

   87 V_f_cabecera: T_ID T_PARENTESIS_APERTURA V_lista_d_var T_PARENTESIS_CIERRE T_DEV V_d_tipo T_COMPOSICION_SECUENCIAL

   88 V_d_par_form: V_d_p_form T_COMPOSICION_SECUENCIAL V_d_par_form
   89             | ε

   90 V_d_p_form: T_ENTRADA V_lista_id T_OPERADOR_DEF_TIPO V_d_tipo
   91           | T_SALIDA V_lista_id T_OPERADOR_DEF_TIPO V_d_tipo
   92           | T_E_S V_lista_id T_OPERADOR_DEF_TIPO V_d_tipo

   93 V_accion_ll: T_ID T_PARENTESIS_APERTURA V_l_ll T_PARENTESIS_CIERRE

   94 V_funcion_ll: T_ID T_PARENTESIS_APERTURA V_l_ll T_PARENTESIS_CIERRE

   95 V_l_ll: V_expresion T_SEPARADOR V_l_ll
   96       | V_expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    T_ASIGNACION (258) 76 83
    T_COMPOSICION_SECUENCIAL (259) 1 15 16 17 18 28 30 31 32 33 35 69 86 87 88
    T_CONTINUAR (260) 71
    T_CORCHETE_APERTURA (261) 21 66
    T_CORCHETE_CIERRE (262) 21 66
    T_DE (263) 21
    T_DECL_ACC (264) 84
    T_DECL_ALGORITMO (265) 1
    T_DECL_B_MIENTRAS (266) 82
    T_DECL_B_PARA (267) 83
    T_DECL_CONDICIONAL_SI (268) 77
    T_DECL_CONDICIONAL_SINO (269) 78
    T_DECL_CONST (270) 16
    T_DECL_FUNC (271) 85
    T_DECL_TABLA (272) 21
    T_DECL_TUPLA (273) 20
    T_DECL_VAR (274) 17
    T_DEF_TIPO (275) 15
    T_DEV (276) 85 87
    T_E_S (277) 92
    T_ENTRADA (278) 42 90
    T_ENTONCES (279) 77 78
    T_HACER (280) 82 83
    T_HASTA (281) 83
    T_ID <cadena> (282) 1 18 22 28 30 31 33 37 38 65 83 86 87 93 94
    T_ID_BOOLEANO <cadena> (283) 32 68
    T_IGUAL (284) 18 30 31 32 33
    T_LITERAL_BOOLEANO <literal_booleano> (285) 32 57
    T_LITERAL_CADENA <literal_cadena> (286) 33
    T_LITERAL_CARACTER <literal_caracter> (287) 27 31
    T_LITERAL_NUMERICO <literal_numerico> (288) 30 51
    T_NOMBRE_TIPO <cadena> (289) 25
    T_OPERADOR_DEF_TIPO (290) 28 35 90 91 92
    T_OPERADOR_NO (291) 55
    T_OPERADOR_O (292) 54
    T_OPERADOR_PRIO_DOS <cadena> (293) 48
    T_OPERADOR_PRIO_TRES <cadena> (294) 47 52
    T_OPERADOR_RELACIONAL <cadena> (295) 58
    T_OPERADOR_Y <cadena> (296) 53
    T_PARENTESIS_APERTURA (297) 49 59 86 87 93 94
    T_PARENTESIS_CIERRE (298) 49 59 86 87 93 94
    T_POST (299) 3
    T_PREC (300) 2
    T_PUNTO (301) 1 62 63
    T_REF (302) 24 67
    T_SALIDA (303) 43 91
    T_SEPARADOR (304) 37 95
    T_SUBRANGO_TABLA (305) 21 23
    T_TERM_ACC (306) 84
    T_TERM_ALGORITMO (307) 1
    T_TERM_B_MIENTRAS (308) 82
    T_TERM_B_PARA (309) 83
    T_TERM_CONDICIONAL_SI (310) 77
    T_TERM_CONST (311) 16
    T_TERM_FUNC (312) 85
    T_TERM_TIPO (313) 15
    T_TERM_TUPLA (314) 20
    T_TERM_VAR (315) 17


No terminales con las reglas donde aparecen

    $accept (61)
        on left: 0
    algoritmo (62)
        on left: 1
        on right: 0
    V_cabecera (63)
        on left: 2
        on right: 1
    V_bloque_alg (64)
        on left: 3
        on right: 1
    V_decl_globales (65)
        on left: 4 5 6
        on right: 2 4 5
    V_decl_a_f (66)
        on left: 7 8 9
        on right: 2 7 8
    V_bloque (67)
        on left: 10
        on right: 3 84 85
    V_declaraciones (68)
        on left: 11 12 13 14
        on right: 10 11 12 13
    V_declaracion_tipo (69)
        on left: 15
        on right: 4 11
    V_declaracion_const (70)
        on left: 16
        on right: 5 12
    V_declaracion_var (71)
        on left: 17
        on right: 13
    V_lista_d_tipo (72)
        on left: 18 19
        on right: 15 18
    V_d_tipo (73)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 35 87 90 91 92
    V_expresion_t (74)
        on left: 26 27
        on right: 21 23
    V_lista_campos (75)
        on left: 28 29
        on right: 20 28
    V_lista_d_const (76)
        on left: 30 31 32 33 34
        on right: 16 30 31 32 33
    V_lista_d_var (77)
        on left: 35 36
        on right: 17 35 42 43 87
    V_lista_id <cadena> (78)
        on left: 37 38
        on right: 35 37 90 91 92
    V_decl_ent_sal (79)
        on left: 39 40 41
        on right: 2
    V_decl_ent (80)
        on left: 42
        on right: 39 40
    V_decl_sal (81)
        on left: 43
        on right: 40 41
    V_expresion <celda> (82)
        on left: 44 45 46
        on right: 26 58 66 76 77 78 82 83 85 95 96
    V_exp_a <celda> (83)
        on left: 47 48 49 50 51 52
        on right: 44 47 48 49 52
    V_exp_b <celda> (84)
        on left: 53 54 55 56 57 58 59
        on right: 45 53 54 55 59
    V_operando <celda> (85)
        on left: 60
        on right: 50 66 67 76
    V_cadena_operandos <celda> (86)
        on left: 61
        on right: 60
    V_continuacion_cadena (87)
        on left: 62 63 64
        on right: 61 62
    V_operando_no_booleano <celda> (88)
        on left: 65 66 67
        on right: 61 62
    V_operando_booleano (89)
        on left: 68
        on right: 56 63
    V_instrucciones (90)
        on left: 69 70
        on right: 10 69 77 78 82 83
    V_instruccion (91)
        on left: 71 72 73 74 75
        on right: 69 70
    V_asignacion (92)
        on left: 76
        on right: 72
    V_alternativa (93)
        on left: 77
        on right: 73
    V_lista_opciones (94)
        on left: 78 79
        on right: 77 78
    V_iiteracion (95)
        on left: 80 81
        on right: 74
    V_it_cota_exp (96)
        on left: 82
        on right: 81
    V_it_cota_fija (97)
        on left: 83
        on right: 80
    V_accion_d (98)
        on left: 84
        on right: 7
    V_funcion_d (99)
        on left: 85
        on right: 8
    V_a_cabecera (100)
        on left: 86
        on right: 84
    V_f_cabecera (101)
        on left: 87
        on right: 85
    V_d_par_form (102)
        on left: 88 89
        on right: 86 88
    V_d_p_form (103)
        on left: 90 91 92
        on right: 88
    V_accion_ll (104)
        on left: 93
        on right: 75
    V_funcion_ll (105)
        on left: 94
        on right: 46
    V_l_ll (106)
        on left: 95 96
        on right: 93 94 95


Estado 0

    0 $accept: • algoritmo $end

    T_DECL_ALGORITMO  desplazar e ir al estado 1

    algoritmo  ir al estado 2


Estado 1

    1 algoritmo: T_DECL_ALGORITMO • T_ID T_COMPOSICION_SECUENCIAL V_cabecera V_bloque_alg T_TERM_ALGORITMO T_PUNTO

    T_ID  desplazar e ir al estado 3


Estado 2

    0 $accept: algoritmo • $end

    $end  desplazar e ir al estado 4


Estado 3

    1 algoritmo: T_DECL_ALGORITMO T_ID • T_COMPOSICION_SECUENCIAL V_cabecera V_bloque_alg T_TERM_ALGORITMO T_PUNTO

    T_COMPOSICION_SECUENCIAL  desplazar e ir al estado 5


Estado 4

    0 $accept: algoritmo $end •

    $default  aceptar


Estado 5

    1 algoritmo: T_DECL_ALGORITMO T_ID T_COMPOSICION_SECUENCIAL • V_cabecera V_bloque_alg T_TERM_ALGORITMO T_PUNTO

    T_DECL_CONST  desplazar e ir al estado 6
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 6 (V_decl_globales)

    V_cabecera           ir al estado 8
    V_decl_globales      ir al estado 9
    V_declaracion_tipo   ir al estado 10
    V_declaracion_const  ir al estado 11


Estado 6

   16 V_declaracion_const: T_DECL_CONST • V_lista_d_const T_TERM_CONST T_COMPOSICION_SECUENCIAL

    T_ID           desplazar e ir al estado 12
    T_ID_BOOLEANO  desplazar e ir al estado 13

    $default  reduce usando la regla 34 (V_lista_d_const)

    V_lista_d_const  ir al estado 14


Estado 7

   15 V_declaracion_tipo: T_DEF_TIPO • V_lista_d_tipo T_TERM_TIPO T_COMPOSICION_SECUENCIAL

    T_ID  desplazar e ir al estado 15

    $default  reduce usando la regla 19 (V_lista_d_tipo)

    V_lista_d_tipo  ir al estado 16


Estado 8

    1 algoritmo: T_DECL_ALGORITMO T_ID T_COMPOSICION_SECUENCIAL V_cabecera • V_bloque_alg T_TERM_ALGORITMO T_PUNTO

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_bloque_alg         ir al estado 18
    V_bloque             ir al estado 19
    V_declaraciones      ir al estado 20
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 9

    2 V_cabecera: V_decl_globales • V_decl_a_f V_decl_ent_sal T_PREC

    T_DECL_ACC   desplazar e ir al estado 24
    T_DECL_FUNC  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (V_decl_a_f)

    V_decl_a_f   ir al estado 26
    V_accion_d   ir al estado 27
    V_funcion_d  ir al estado 28


Estado 10

    4 V_decl_globales: V_declaracion_tipo • V_decl_globales

    T_DECL_CONST  desplazar e ir al estado 6
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 6 (V_decl_globales)

    V_decl_globales      ir al estado 29
    V_declaracion_tipo   ir al estado 10
    V_declaracion_const  ir al estado 11


Estado 11

    5 V_decl_globales: V_declaracion_const • V_decl_globales

    T_DECL_CONST  desplazar e ir al estado 6
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 6 (V_decl_globales)

    V_decl_globales      ir al estado 30
    V_declaracion_tipo   ir al estado 10
    V_declaracion_const  ir al estado 11


Estado 12

   30 V_lista_d_const: T_ID • T_IGUAL T_LITERAL_NUMERICO T_COMPOSICION_SECUENCIAL V_lista_d_const
   31                | T_ID • T_IGUAL T_LITERAL_CARACTER T_COMPOSICION_SECUENCIAL V_lista_d_const
   33                | T_ID • T_IGUAL T_LITERAL_CADENA T_COMPOSICION_SECUENCIAL V_lista_d_const

    T_IGUAL  desplazar e ir al estado 31


Estado 13

   32 V_lista_d_const: T_ID_BOOLEANO • T_IGUAL T_LITERAL_BOOLEANO T_COMPOSICION_SECUENCIAL V_lista_d_const

    T_IGUAL  desplazar e ir al estado 32


Estado 14

   16 V_declaracion_const: T_DECL_CONST V_lista_d_const • T_TERM_CONST T_COMPOSICION_SECUENCIAL

    T_TERM_CONST  desplazar e ir al estado 33


Estado 15

   18 V_lista_d_tipo: T_ID • T_IGUAL V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_d_tipo

    T_IGUAL  desplazar e ir al estado 34


Estado 16

   15 V_declaracion_tipo: T_DEF_TIPO V_lista_d_tipo • T_TERM_TIPO T_COMPOSICION_SECUENCIAL

    T_TERM_TIPO  desplazar e ir al estado 35


Estado 17

   17 V_declaracion_var: T_DECL_VAR • V_lista_d_var T_TERM_VAR T_COMPOSICION_SECUENCIAL

    T_ID  desplazar e ir al estado 36

    $default  reduce usando la regla 36 (V_lista_d_var)

    V_lista_d_var  ir al estado 37
    V_lista_id     ir al estado 38


Estado 18

    1 algoritmo: T_DECL_ALGORITMO T_ID T_COMPOSICION_SECUENCIAL V_cabecera V_bloque_alg • T_TERM_ALGORITMO T_PUNTO

    T_TERM_ALGORITMO  desplazar e ir al estado 39


Estado 19

    3 V_bloque_alg: V_bloque • T_POST

    T_POST  desplazar e ir al estado 40


Estado 20

   10 V_bloque: V_declaraciones • V_instrucciones

    T_CONTINUAR            desplazar e ir al estado 41
    T_DECL_B_MIENTRAS      desplazar e ir al estado 42
    T_DECL_B_PARA          desplazar e ir al estado 43
    T_DECL_CONDICIONAL_SI  desplazar e ir al estado 44
    T_ID                   desplazar e ir al estado 45

    V_operando              ir al estado 46
    V_cadena_operandos      ir al estado 47
    V_operando_no_booleano  ir al estado 48
    V_instrucciones         ir al estado 49
    V_instruccion           ir al estado 50
    V_asignacion            ir al estado 51
    V_alternativa           ir al estado 52
    V_iiteracion            ir al estado 53
    V_it_cota_exp           ir al estado 54
    V_it_cota_fija          ir al estado 55
    V_accion_ll             ir al estado 56


Estado 21

   11 V_declaraciones: V_declaracion_tipo • V_declaraciones

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_declaraciones      ir al estado 57
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 22

   12 V_declaraciones: V_declaracion_const • V_declaraciones

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_declaraciones      ir al estado 58
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 23

   13 V_declaraciones: V_declaracion_var • V_declaraciones

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_declaraciones      ir al estado 59
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 24

   84 V_accion_d: T_DECL_ACC • V_a_cabecera V_bloque T_TERM_ACC

    T_ID  desplazar e ir al estado 60

    V_a_cabecera  ir al estado 61


Estado 25

   85 V_funcion_d: T_DECL_FUNC • V_f_cabecera V_bloque T_DEV V_expresion T_TERM_FUNC

    T_ID  desplazar e ir al estado 62

    V_f_cabecera  ir al estado 63


Estado 26

    2 V_cabecera: V_decl_globales V_decl_a_f • V_decl_ent_sal T_PREC

    T_ENTRADA  desplazar e ir al estado 64
    T_SALIDA   desplazar e ir al estado 65

    V_decl_ent_sal  ir al estado 66
    V_decl_ent      ir al estado 67
    V_decl_sal      ir al estado 68


Estado 27

    7 V_decl_a_f: V_accion_d • V_decl_a_f

    T_DECL_ACC   desplazar e ir al estado 24
    T_DECL_FUNC  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (V_decl_a_f)

    V_decl_a_f   ir al estado 69
    V_accion_d   ir al estado 27
    V_funcion_d  ir al estado 28


Estado 28

    8 V_decl_a_f: V_funcion_d • V_decl_a_f

    T_DECL_ACC   desplazar e ir al estado 24
    T_DECL_FUNC  desplazar e ir al estado 25

    $default  reduce usando la regla 9 (V_decl_a_f)

    V_decl_a_f   ir al estado 70
    V_accion_d   ir al estado 27
    V_funcion_d  ir al estado 28


Estado 29

    4 V_decl_globales: V_declaracion_tipo V_decl_globales •

    $default  reduce usando la regla 4 (V_decl_globales)


Estado 30

    5 V_decl_globales: V_declaracion_const V_decl_globales •

    $default  reduce usando la regla 5 (V_decl_globales)


Estado 31

   30 V_lista_d_const: T_ID T_IGUAL • T_LITERAL_NUMERICO T_COMPOSICION_SECUENCIAL V_lista_d_const
   31                | T_ID T_IGUAL • T_LITERAL_CARACTER T_COMPOSICION_SECUENCIAL V_lista_d_const
   33                | T_ID T_IGUAL • T_LITERAL_CADENA T_COMPOSICION_SECUENCIAL V_lista_d_const

    T_LITERAL_CADENA    desplazar e ir al estado 71
    T_LITERAL_CARACTER  desplazar e ir al estado 72
    T_LITERAL_NUMERICO  desplazar e ir al estado 73


Estado 32

   32 V_lista_d_const: T_ID_BOOLEANO T_IGUAL • T_LITERAL_BOOLEANO T_COMPOSICION_SECUENCIAL V_lista_d_const

    T_LITERAL_BOOLEANO  desplazar e ir al estado 74


Estado 33

   16 V_declaracion_const: T_DECL_CONST V_lista_d_const T_TERM_CONST • T_COMPOSICION_SECUENCIAL

    T_COMPOSICION_SECUENCIAL  desplazar e ir al estado 75


Estado 34

   18 V_lista_d_tipo: T_ID T_IGUAL • V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_d_tipo

    T_DECL_TABLA           desplazar e ir al estado 76
    T_DECL_TUPLA           desplazar e ir al estado 77
    T_ID                   desplazar e ir al estado 78
    T_ID_BOOLEANO          desplazar e ir al estado 79
    T_LITERAL_BOOLEANO     desplazar e ir al estado 80
    T_LITERAL_CARACTER     desplazar e ir al estado 81
    T_LITERAL_NUMERICO     desplazar e ir al estado 82
    T_NOMBRE_TIPO          desplazar e ir al estado 83
    T_OPERADOR_NO          desplazar e ir al estado 84
    T_OPERADOR_PRIO_TRES   desplazar e ir al estado 85
    T_PARENTESIS_APERTURA  desplazar e ir al estado 86
    T_REF                  desplazar e ir al estado 87

    V_d_tipo                ir al estado 88
    V_expresion_t           ir al estado 89
    V_expresion             ir al estado 90
    V_exp_a                 ir al estado 91
    V_exp_b                 ir al estado 92
    V_operando              ir al estado 93
    V_cadena_operandos      ir al estado 47
    V_operando_no_booleano  ir al estado 48
    V_operando_booleano     ir al estado 94
    V_funcion_ll            ir al estado 95


Estado 35

   15 V_declaracion_tipo: T_DEF_TIPO V_lista_d_tipo T_TERM_TIPO • T_COMPOSICION_SECUENCIAL

    T_COMPOSICION_SECUENCIAL  desplazar e ir al estado 96


Estado 36

   37 V_lista_id: T_ID • T_SEPARADOR V_lista_id
   38           | T_ID •

    T_SEPARADOR  desplazar e ir al estado 97

    $default  reduce usando la regla 38 (V_lista_id)


Estado 37

   17 V_declaracion_var: T_DECL_VAR V_lista_d_var • T_TERM_VAR T_COMPOSICION_SECUENCIAL

    T_TERM_VAR  desplazar e ir al estado 98


Estado 38

   35 V_lista_d_var: V_lista_id • T_OPERADOR_DEF_TIPO V_d_tipo T_COMPOSICION_SECUENCIAL V_lista_d_var

    T_OPERADOR_DEF_TIPO  desplazar e ir al estado 99


Estado 39

    1 algoritmo: T_DECL_ALGORITMO T_ID T_COMPOSICION_SECUENCIAL V_cabecera V_bloque_alg T_TERM_ALGORITMO • T_PUNTO

    T_PUNTO  desplazar e ir al estado 100


Estado 40

    3 V_bloque_alg: V_bloque T_POST •

    $default  reduce usando la regla 3 (V_bloque_alg)


Estado 41

   71 V_instruccion: T_CONTINUAR •

    $default  reduce usando la regla 71 (V_instruccion)


Estado 42

   82 V_it_cota_exp: T_DECL_B_MIENTRAS • V_expresion T_HACER V_instrucciones T_TERM_B_MIENTRAS

    T_ID                   desplazar e ir al estado 101
    T_ID_BOOLEANO          desplazar e ir al estado 79
    T_LITERAL_BOOLEANO     desplazar e ir al estado 80
    T_LITERAL_NUMERICO     desplazar e ir al estado 82
    T_OPERADOR_NO          desplazar e ir al estado 84
    T_OPERADOR_PRIO_TRES   desplazar e ir al estado 85
    T_PARENTESIS_APERTURA  desplazar e ir al estado 86

    V_expresion             ir al estado 102
    V_exp_a                 ir al estado 91
    V_exp_b                 ir al estado 92
    V_operando              ir al estado 93
    V_cadena_operandos      ir al estado 47
    V_operando_no_booleano  ir al estado 48
    V_operando_booleano     ir al estado 94
    V_funcion_ll            ir al estado 95


Estado 43

   83 V_it_cota_fija: T_DECL_B_PARA • T_ID T_ASIGNACION V_expresion T_HASTA V_expresion T_HACER V_instrucciones T_TERM_B_PARA

    T_ID  desplazar e ir al estado 103


Estado 44

   77 V_alternativa: T_DECL_CONDICIONAL_SI • V_expresion T_ENTONCES V_instrucciones V_lista_opciones T_TERM_CONDICIONAL_SI

    T_ID                   desplazar e ir al estado 101
    T_ID_BOOLEANO          desplazar e ir al estado 79
    T_LITERAL_BOOLEANO     desplazar e ir al estado 80
    T_LITERAL_NUMERICO     desplazar e ir al estado 82
    T_OPERADOR_NO          desplazar e ir al estado 84
    T_OPERADOR_PRIO_TRES   desplazar e ir al estado 85
    T_PARENTESIS_APERTURA  desplazar e ir al estado 86

    V_expresion             ir al estado 104
    V_exp_a                 ir al estado 91
    V_exp_b                 ir al estado 92
    V_operando              ir al estado 93
    V_cadena_operandos      ir al estado 47
    V_operando_no_booleano  ir al estado 48
    V_operando_booleano     ir al estado 94
    V_funcion_ll            ir al estado 95


Estado 45

   65 V_operando_no_booleano: T_ID •
   93 V_accion_ll: T_ID • T_PARENTESIS_APERTURA V_l_ll T_PARENTESIS_CIERRE

    T_PARENTESIS_APERTURA  desplazar e ir al estado 105

    $default  reduce usando la regla 65 (V_operando_no_booleano)


Estado 46

   66 V_operando_no_booleano: V_operando • T_CORCHETE_APERTURA V_expresion T_CORCHETE_CIERRE
   67                       | V_operando • T_REF
   76 V_asignacion: V_operando • T_ASIGNACION V_expresion

    T_ASIGNACION         desplazar e ir al estado 106
    T_CORCHETE_APERTURA  desplazar e ir al estado 107
    T_REF                desplazar e ir al estado 108


Estado 47

   60 V_operando: V_cadena_operandos •

    $default  reduce usando la regla 60 (V_operando)


Estado 48

   61 V_cadena_operandos: V_operando_no_booleano • V_continuacion_cadena

    T_PUNTO  desplazar e ir al estado 109

    $default  reduce usando la regla 64 (V_continuacion_cadena)

    V_continuacion_cadena  ir al estado 110


Estado 49

   10 V_bloque: V_declaraciones V_instrucciones •

    $default  reduce usando la regla 10 (V_bloque)


Estado 50

   69 V_instrucciones: V_instruccion • T_COMPOSICION_SECUENCIAL V_instrucciones
   70                | V_instruccion •

    T_COMPOSICION_SECUENCIAL  desplazar e ir al estado 111

    $default  reduce usando la regla 70 (V_instrucciones)


Estado 51

   72 V_instruccion: V_asignacion •

    $default  reduce usando la regla 72 (V_instruccion)


Estado 52

   73 V_instruccion: V_alternativa •

    $default  reduce usando la regla 73 (V_instruccion)


Estado 53

   74 V_instruccion: V_iiteracion •

    $default  reduce usando la regla 74 (V_instruccion)


Estado 54

   81 V_iiteracion: V_it_cota_exp •

    $default  reduce usando la regla 81 (V_iiteracion)


Estado 55

   80 V_iiteracion: V_it_cota_fija •

    $default  reduce usando la regla 80 (V_iiteracion)


Estado 56

   75 V_instruccion: V_accion_ll •

    $default  reduce usando la regla 75 (V_instruccion)


Estado 57

   11 V_declaraciones: V_declaracion_tipo V_declaraciones •

    $default  reduce usando la regla 11 (V_declaraciones)


Estado 58

   12 V_declaraciones: V_declaracion_const V_declaraciones •

    $default  reduce usando la regla 12 (V_declaraciones)


Estado 59

   13 V_declaraciones: V_declaracion_var V_declaraciones •

    $default  reduce usando la regla 13 (V_declaraciones)


Estado 60

   86 V_a_cabecera: T_ID • T_PARENTESIS_APERTURA V_d_par_form T_PARENTESIS_CIERRE T_COMPOSICION_SECUENCIAL

    T_PARENTESIS_APERTURA  desplazar e ir al estado 112


Estado 61

   84 V_accion_d: T_DECL_ACC V_a_cabecera • V_bloque T_TERM_ACC

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_bloque             ir al estado 113
    V_declaraciones      ir al estado 20
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 62

   87 V_f_cabecera: T_ID • T_PARENTESIS_APERTURA V_lista_d_var T_PARENTESIS_CIERRE T_DEV V_d_tipo T_COMPOSICION_SECUENCIAL

    T_PARENTESIS_APERTURA  desplazar e ir al estado 114


Estado 63

   85 V_funcion_d: T_DECL_FUNC V_f_cabecera • V_bloque T_DEV V_expresion T_TERM_FUNC

    T_DECL_CONST  desplazar e ir al estado 6
    T_DECL_VAR    desplazar e ir al estado 17
    T_DEF_TIPO    desplazar e ir al estado 7

    $default  reduce usando la regla 14 (V_declaraciones)

    V_bloque             ir al estado 115
    V_declaraciones      ir al estado 20
    V_declaracion_tipo   ir al estado 21
    V_declaracion_const  ir al estado 22
    V_declaracion_var    ir al estado 23


Estado 64

   42 V_decl_ent: T_ENTRADA • V_lista_d_var

    T_ID  desplazar e ir al estado 36

    $default  reduce usando la regla 36 (V_lista_d_var)

    V_lista_d_var  ir al estado 116
    V_lista_id     ir al estado 38


Estado 65

   43 V_decl_sal: T_SALIDA • V_lista_d_var

    T_ID  desplazar e ir al estado 36

    $default  reduce usando la regla 36 (V_lista_d_var)
